<?xml version="1.0"?>
<package format="2">
  <name>jackal_controller</name>
  <version>0.0.0</version>
  <description>The jackal_controller package. Controls Clear Path Jackal robot with QT controler in a simulated gazebo environment.</description>
  
  <maintainer email="trevor.slack@colorado.edu">Trevor Slack</maintainer>
  <license>0BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>


  <exec_depend>rospy</exec_depend>

</package>
